--- a/src/pages/Home/Home.style.css
+++ b/src/pages/Home/Home.style.css
@@ -1,6 +1,6 @@
 .container {
-	display: flex;
+	display: grid;
 	width: 100vw;
 	height: 100vh;
-	background-color: cyan;
+	grid-template-rows: max-content 1fr;
 }
