--- a/src/pages/Home/childs/Weather/Weather.style.css
+++ b/src/pages/Home/childs/Weather/Weather.style.css
@@ -1,7 +1,6 @@
 .container {
 	display: flex;
 	justify-content: center;
-	color: #363636;
 	font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -18,6 +17,7 @@
 	display: grid;
 	grid-template-columns: max-content max-content;
 	grid-gap: 10px;
+	color: #363636;
 }
 
 .city {
@@ -28,6 +28,12 @@
 
 .icon {
 	height: 66px;
+}
+
+.description {
+	font-size: 18px;
+	text-align: center;
+	color: #363636;
 }
 
 .wrapper_temperature {
