Изменил объект хранилища.
1. Изменил объект хранилища. Теперь есть возможность работать на прямую с объектом из API.
2. Добавил loader чтобы разметка не прыгала при получении данных.

--- a/src/pages/Home/childs/Weather/Weather.style.css
+++ b/src/pages/Home/childs/Weather/Weather.style.css
@@ -69,3 +69,14 @@
 	-o-border-radius: 25px;
 	margin-top: 20px;
 }
+
+/* Loader */
+
+.loader {
+	background-image: url(./contents/loader.svg);
+	background-repeat: no-repeat;
+	width: 280px;
+	height: 280px;
+	margin: 40px auto 0 auto;
+	background-size: contain;
+}
