--- a/src/pages/Home/childs/Header/Header.style.css
+++ b/src/pages/Home/childs/Header/Header.style.css
@@ -24,6 +24,16 @@
 	background-repeat: no-repeat;
 }
 
+/* Options */
+
+.options {
+	display: grid;
+	grid-template-columns: max-content max-content;
+	grid-gap: 5px;
+}
+
+/* Search */
+
 .search {
 	width: 285px;
 	height: 30px;
@@ -63,3 +73,25 @@
 	background-position: center;
 }
 
+/* Language */
+
+.language {
+	display: grid;
+	grid-template-columns: max-content max-content;
+	align-items: center;
+	cursor: pointer;
+}
+
+.language > span {
+	font-size: 12px;
+	color: #00b4db;
+}
+
+.languageIcon {
+	width: 30px;
+	height: 30px;
+	background-image: url(./contents/lang.svg);
+	background-size: 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
